# device-remote-management-581-705

./: .env.example  .gitignore  API_DOCUMENTATION.md  CI_CD.md  DEPLOYMENT.md  DOCKER.md  QUICKSTART.md  README.md  docker-compose.yml  start.sh  stop.sh
.init/: .init-build-cmd  .init-install-dependencies  .init-run-tool  .init-test-tool
.knowledge/: .github_workflows_ci-cd.yml.json  (+186 more)
BackendContainer/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  startup.sh
BackendContainer/src/: celery_app.py  config.py  main.py  server.js
BackendContainer/src/api/routes/: __init__.py  auth.py  devices.py  jobs.py  mib.py  tenants.py  tr181.py  users.py
BackendContainer/src/db/: session.py
BackendContainer/src/mib/: __init__.py  parser.py
BackendContainer/src/middleware/: auditLogger.js  auth.js  errorHandler.js  rbac.js  rlsContext.js  tenant_context.py
BackendContainer/src/models/: mib_schemas.py  schemas.py  tr181_schemas.py
BackendContainer/src/ops/: __init__.py  run_demo_snmp.py  seed_demo.py
BackendContainer/src/protocols/: __init__.py  snmp_client.py  tr069_client.py  usp_client.py  webpa_client.py
BackendContainer/src/routes/: auth.js  devices.js  health.js  protocols.js  queries.js  users.js
BackendContainer/src/security/: auth.py
BackendContainer/src/services/: authService.js  protocolService.js
BackendContainer/src/services/protocols/: snmpService.js  tr369Service.js  tr69Service.js  webpaService.js
BackendContainer/src/tasks/: jobs.py  mib_tasks.py
BackendContainer/src/tr181/: __init__.py  catalog.py
(+139 files in other folders)
